--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongodb": "^3.1.1",
+    "mongoose": "^5.2.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "turf": "^3.0.14"
