Ignore sessions and designs

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,9 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
+
+# development sessions
+/sessions
+
+# Internal designs
+/designs
