--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "connect-flash": "^0.1.1",
-    "connect-redis": "^3.3.3",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
@@ -21,8 +21,6 @@
     "mongoose": "^5.2.5",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "session-file-store": "^1.2.0",
-    "uuid": "^3.3.2"
+    "passport-local": "^1.0.0"
   }
 }
